@@ -42,7 +42,7 @@
 
         public void Execute(IBindingEnvironment environment)
         {
-            Machine.Current.Environment.SetValue(this.name, new Function(this.parameterNames, this.body));
+            Machine.Current.Environment.SetValue(this.name, new Function(this.parameterNames, this.body, null, this.isdefault, this.hasvariableparameters));
         }
     }
 }
